[gd_scene load_steps=24 format=2]

[ext_resource path="res://Cooking_MG/CookingMiniGame.gd" type="Script" id=1]
[ext_resource path="res://Art_Assets/KitchenSprites.png" type="Texture" id=2]
[ext_resource path="res://Fonts/munro/Munro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art_Assets/cuttingBoard.png" type="Texture" id=4]
[ext_resource path="res://Cooking_MG/Board.gd" type="Script" id=5]
[ext_resource path="res://Art_Assets/FoodStuffs.png" type="Texture" id=6]
[ext_resource path="res://Cooking_MG/AssortedFood.gd" type="Script" id=7]
[ext_resource path="res://Cooking_MG/RecipeBook.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.33336, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.6666, 26.6666 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 20 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 11.3043, 13 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 130, 70 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 60, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.8889, 25.5556 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44.4444, 25.5556 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 37.7778, 34.4444 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 33.3333, 31.4815 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 48.8889, 27.7778 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 33.3334, 16.6667 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 3 )

[node name="CookingMiniGame" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 439, 298 )
scale = Vector2( 3.83917, 3.83917 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 230, 150 )

[node name="GameTimer" type="Timer" parent="Background"]
wait_time = 15.0

[node name="TimerCount" type="Label" parent="Background"]
visible = false
margin_left = -18.0
margin_top = -53.0
margin_right = 22.0
margin_bottom = -33.0
custom_colors/font_color = Color( 1, 0.0196078, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.464706, 0.464706, 1 )
custom_fonts/font = SubResource( 15 )
text = "30"
align = 1
valign = 1

[node name="Board" type="Sprite" parent="Background"]
visible = false
position = Vector2( -4.44444, 4.44444 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Knife" type="Area2D" parent="Background/Board"]
position = Vector2( -60, 20 )

[node name="Knife" type="Sprite" parent="Background/Board/Knife"]
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 250, 30, 10, 120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Knife"]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="Ingredients" type="Node" parent="Background/Board"]

[node name="Tomato" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )
scale = Vector2( 3, 3 )

[node name="Tomato" type="Sprite" parent="Background/Board/Ingredients/Tomato"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 5, 55, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Tomato"]
shape = SubResource( 2 )

[node name="Salmon" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )
scale = Vector2( 3, 3 )

[node name="Salmon" type="Sprite" parent="Background/Board/Ingredients/Salmon"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 160, 5, 85, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Salmon"]
position = Vector2( 2, 0 )
shape = SubResource( 3 )

[node name="Broccoli" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )

[node name="Broccoli" type="Sprite" parent="Background/Board/Ingredients/Broccoli"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 75, 70, 75, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Broccoli"]
scale = Vector2( 8.84615, 6.15385 )
shape = SubResource( 11 )

[node name="Garlic" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )

[node name="Garlic" type="Sprite" parent="Background/Board/Ingredients/Garlic"]
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 135, 60, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Garlic"]
shape = SubResource( 12 )

[node name="Potato" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )

[node name="Potato" type="Sprite" parent="Background/Board/Ingredients/Potato"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 165, 130, 90, 55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Potato"]
shape = SubResource( 13 )

[node name="Chili" type="Area2D" parent="Background/Board/Ingredients"]
visible = false
position = Vector2( 490, 340 )

[node name="Chili" type="Sprite" parent="Background/Board/Ingredients/Chili"]
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 200, 60, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Board/Ingredients/Chili"]
shape = SubResource( 14 )

[node name="CookPot" type="Sprite" parent="Background/Board"]
position = Vector2( 110, -43.3333 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 180, 170, 100, 80 )

[node name="Tomato" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 10, 0, 80, 60 )

[node name="Salmon" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 170, 55, 70, 40 )

[node name="Broccoli" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 60, 70, 75 )

[node name="Garlic" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 135, 70, 70 )

[node name="Potato" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 170, 185, 75, 65 )

[node name="Chili" type="Sprite" parent="Background/Board/CookPot"]
visible = false
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 10, 205, 55, 25 )

[node name="FoodSelect" type="Sprite" parent="Background"]

[node name="AssortedFood" type="Sprite" parent="Background/FoodSelect"]
visible = false
position = Vector2( 0, 9.66667 )
scale = Vector2( 0.9, 0.9 )
z_index = 1
texture = ExtResource( 4 )
script = ExtResource( 7 )

[node name="Tomato" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( -50, -25 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Tomato"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 5, 55, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Tomato"]
shape = SubResource( 4 )

[node name="Salmon" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( 0, -25 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Salmon"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 165, 5, 80, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Salmon"]
shape = SubResource( 5 )

[node name="Broccoli" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( 50, -25 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Broccoli"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 70, 70, 80, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Broccoli"]
shape = SubResource( 6 )

[node name="Garlic" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( -50, 25 )
scale = Vector2( 0.3, 0.3 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Garlic"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 135, 60, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Garlic"]
shape = SubResource( 7 )

[node name="Potato" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( 0, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Potato"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 160, 130, 100, 55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Potato"]
shape = SubResource( 8 )

[node name="Chili" type="Area2D" parent="Background/FoodSelect/AssortedFood"]
position = Vector2( 50, 25 )
scale = Vector2( 0.3, 0.3 )

[node name="Sprite" type="Sprite" parent="Background/FoodSelect/AssortedFood/Chili"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 200, 60, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/FoodSelect/AssortedFood/Chili"]
shape = SubResource( 9 )

[node name="RecipeBook" type="Sprite" parent="Background/FoodSelect"]
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 160, 170, 130 )
script = ExtResource( 8 )

[node name="Food1" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
position = Vector2( 42, 17 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 240, 40, 40 )

[node name="Food2" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
position = Vector2( -42, -17 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 44, 245, 41, 40 )

[node name="Food3" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
position = Vector2( 42, -17 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 190, 250, 35, 35 )

[node name="Food4" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
position = Vector2( -42, 17 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 90, 200, 60, 30 )

[node name="WrongFood1" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
visible = false
position = Vector2( 42, -17 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 235, 45, 50 )

[node name="WrongFood2" type="Sprite" parent="Background/FoodSelect/RecipeBook"]
visible = false
position = Vector2( -42, 17 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 135, 250, 50, 30 )

[node name="Timer" type="Timer" parent="Background/FoodSelect/RecipeBook"]
wait_time = 4.0
one_shot = true

[node name="CountDown" type="Label" parent="Background/FoodSelect/RecipeBook"]
margin_left = -5.0
margin_top = -8.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.464844, 0.464844, 1 )
custom_fonts/font = SubResource( 10 )
text = "3"
align = 1
valign = 1

[connection signal="timeout" from="Background/GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Tomato" to="." method="_on_Tomato_input_event"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Salmon" to="." method="_on_Salmon_input_event"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Broccoli" to="." method="_on_Broccoli_input_event"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Garlic" to="." method="_on_Garlic_input_event"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Potato" to="." method="_on_Potato_input_event"]
[connection signal="input_event" from="Background/FoodSelect/AssortedFood/Chili" to="." method="_on_Chili_input_event"]
[connection signal="timeout" from="Background/FoodSelect/RecipeBook/Timer" to="." method="_on_Timer_timeout"]
